--- a/CWC_project/client/package.json
+++ b/CWC_project/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "buffer": "^6.0.3",
     "html-react-parser": "^1.4.8",
     "node-html-parser": "^5.2.0",
