--- a/CWC_project/client/package.json
+++ b/CWC_project/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "clients",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
+    "buffer": "^6.0.3",
     "html-react-parser": "^1.4.8",
-    "react-html-parser":"^2.0.2",
     "node-html-parser": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
