--- a/CWC_project/client/package.json
+++ b/CWC_project/client/package.json
@@ -12,14 +12,16 @@
     "axios": "^0.26.0",
     "buffer": "^6.0.3",
     "html-react-parser": "^1.4.8",
+    "ipfs-api": "^26.1.2",
     "node-html-parser": "^5.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^8.9.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
